--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,8 +34,24 @@
     box-shadow: inset 0 -40px 0 rgba(70, 223, 212, 0.3);
 }
 
-.itemsContainer {
-    min-height: 50vh;
-    display: grid;
-    place-items: center;
+.itemsContainer h1{
+    text-align: center;
+    margin: 1rem;
+}
+
+.items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.item{
+    width: 20%;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    text-align: center;
+    border-style: solid;
+}
+.item *{
+    margin: 0.2rem;
 }
