--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,11 @@
     background-color: rgb(14, 100, 237);
     
 }
+.brand{
+    text-decoration: none;
+    color:white;
+    padding: 0.5rem
+}
 
 .navItems{
     display: flex;
